--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
 
 *,
